# rsDtool

./: Cargo.toml
Dtool_GUI/: Cargo.toml
Dtool_core/: Cargo.toml
Dtool_core/src/: cache.rs  controler.rs  download_core.rs  downloader.rs  error.rs  lib.rs  parse_handers.rs  parse_response.rs  speed.rs  stream.rs  tracker.rs
Dtool_impl/: Cargo.toml
Dtool_impl/src/: cache.rs  lib.rs
Dtool_impl/src/base_utils/: mod.rs
Dtool_impl/src/downloader/: abstract.rs  async_func.rs  block.rs  builder.rs  control.rs  core.rs  download_group.rs  error.rs  family.rs  group_impl.rs  hander.rs  httprequest.rs  mod.rs  muti_part.rs  one_part.rs  request.rs  segment.rs  share_ptr_family.rs  single_part.rs  single_thread.rs  unresumeable.rs
Dtool_impl/src/utils/: bytes_hand.rs  clone_deref.rs  file_name.rs  mod.rs  request.rs  state_sync.rs.DELETED
