[workspace]
members = ["Dtool_core", "Dtool_impl", "Dtool_GUI", "rstest"]

[workspace.dependencies]
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12.5"
thiserror = "2.0.12"
headers = "0.4.1"
futures = "0.3.32"
scopeguard = "1.2.0"
waker-fn = "1.2.0"
radium = "1.1.1"
