[package]
name = "Dtool_impl"
version = "0.1.0"
edition = "2024"
authors = ["Alpha_Qian 16556985@qq.com"]

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
headers = "0.4.1"
Dtool_core = { path = "../Dtool_core" }
clap = "4.5.40"
anyhow = "1.0.98"
thiserror = { workspace = true }
futures = { workspace = true }
scopeguard = {workspace = true}